No Longer Using Links for Jumps
Fixed Issue with NavBar Buttons

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,8 +51,10 @@ html {
 .topnav a:hover {
     /* border-top : 1px solid; */
     animation-name: turnwhite;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
+    animation-duration: 1s;
+    /* animation-fill-mode: forwards; */
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 .topnav a.active {
